tests/no_compile/bad_inner_attr.stderr
error: proc-macro derive panicked
 --> tests/no_compile/bad_inner_attr.rs:1:10
  |
1 | #[derive(derive_mmio::Mmio)]
  |          ^^^^^^^^^^^^^^^^^
  |
  = help: message: `#[mmio(...)]` only supports 'Inner', 'Read', 'PureRead', 'Write', and 'Modify' options
